make second page the services

--- a/index.html
+++ b/index.html
@@ -31,5 +31,39 @@
         </div>
     </section>
 
+    <section class="cards" id="services">
+        <h2 class="title">Services</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-code"></i>
+                </div>
+                <div class="info">
+                    <h3>Coding</h3>
+                    <p>Backend Engineer PHP Laravel</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-video"></i>
+                </div>
+                <div class="info">
+                    <h3>Vedio Editing</h3>
+                    <p>I have experiance 3 years in Preimer and After Effect</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-brands fa-connectdevelop"></i>
+                </div>
+                <div class="info">
+                    <h3>Full Stack</h3>
+                    <p>I have experiance 2 years in HTML , CSS & JS</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 </html>
