make second page the project page

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header>
         <a href="" class="logo">Abdalla</a>
         <nav class="navigation">
-            <a href="services">Services</a>
-            <a href="projects">Projects</a>
-            <a href="contact">Contact</a>
+            <a href="#services">Services</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
     </header>
 
@@ -59,6 +59,21 @@
                 <div class="info">
                     <h3>Full Stack</h3>
                     <p>I have experiance 2 years in HTML , CSS & JS</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="#projects" id="#projects">
+        <h2 class="title">Projects</h2>
+        <div class="content">
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="./img/P2.jpg" alt="">
+                </div>
+                <div class="project-info">
+                    <p class="project-catigory">FrontEnd</p>
+                    <strong class="project-title"><span class="tt">X platform</span><a class="more-details" href="https://github.com/abdallah-ghanem/FrontendTwitter/tree/main">More Details</a></strong>
                 </div>
             </div>
         </div>
