end this prtofolio and make it for all devices like mobile and tablit

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 
     <section class="main">
         <div>
-            <h2>Hello, I'm Abdalla<br><span>Software Engineer</span></h2><!-- br=breake line =new line -->
+            <h2>Hello, I'm Abdalla<br><span>Software Engineer</span></h2>
             <h3>I'm Electronics and Communication Engineer<br>Graduated from Faculty of Engineering<br>Alexandria Unveristy</h3>
             <a href="#projects" class="main-btn">View My Work</a>
             <div class="social-icons">
-                <a href="https://www.linkedin.com/in/abdallah-ghanem0"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="https://www.behance.net/abdoghanem"><i class="fa-brands fa-behance"></i></a>
-                <a href="https://github.com/abdallah-ghanem"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/abdallah-ghanem0"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.behance.net/abdoghanem"><i class="fa-brands fa-behance"></i></a>
+            <a href="https://github.com/abdallah-ghanem"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
     </section>
@@ -64,20 +64,104 @@
         </div>
     </section>
 
-    <section class="#projects" id="#projects">
+    <section class="projects" id="projects">
         <h2 class="title">Projects</h2>
         <div class="content">
             <div class="project-card">
                 <div class="project-img">
-                    <img src="./img/P2.jpg" alt="">
+                    <img src="img/P2.jpg" >
                 </div>
                 <div class="project-info">
                     <p class="project-catigory">FrontEnd</p>
-                    <strong class="project-title"><span class="tt">X platform</span><a class="more-details" href="https://github.com/abdallah-ghanem/FrontendTwitter/tree/main">More Details</a></strong>
+                    <strong class="project-title">
+                        <span class="tt">X platform</span>
+                        <a href="https://github.com/abdallah-ghanem/FrontendTwitter/tree/main" class="more-details" >More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="img/to do.jpg" >
+                </div>
+                <div class="project-info">
+                    <p class="project-catigory">FrontEnd</p>
+                    <strong class="project-title">
+                        <span class="tt">Web App</span>
+                        <a href="https://github.com/abdallah-ghanem/ToDOListApp" class="more-details" >More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="img/PHP Laravel.jpg" >
+                </div>
+                <div class="project-info">
+                    <p class="project-catigory">BackEnd</p>
+                    <strong class="project-title">
+                        <span class="tt">Blog</span>
+                        <a href="https://github.com/abdallah-ghanem/Blog" class="more-details" >More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="img/Youtube.jpg" >
+                </div>
+                <div class="project-info">
+                    <p class="project-catigory">FrontEnd</p>
+                    <strong class="project-title">
+                        <span class="tt">Youtube</span>
+                        <a href="https://github.com/abdallah-ghanem/Front-end-YoutubePage" class="more-details" >More Details</a>
+                    </strong>
+                </div>
+            </div>
+            <div class="project-card">
+                <div class="project-img">
+                    <img src="img/Untitled design.png" >
+                </div>
+                <div class="project-info">
+                    <p class="project-catigory">FrontEnd</p>
+                    <strong class="project-title">
+                        <span class="tt">Profile page</span>
+                        <a href="https://github.com/abdallah-ghanem/PersonalWebSite" class="more-details" >More Details</a>
+                    </strong>
                 </div>
             </div>
         </div>
     </section>
+
+    <section class="cards-contact" id="contact">
+        <h2 class="title">Let's Contact us</h2>
+        <div class="content">
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-phone"></i>
+                </div>
+                <div class="info">
+                    <h3>Phone</h3>
+                    <p>(+02) 01202899656</p>
+                </div>
+            </div>
+            <div class="card">
+                <div class="icon">
+                    <i class="fa-solid fa-envelope"></i>
+                </div>
+                <div class="info">
+                    <h3>Email</h3>
+                    <p>abdallah21basemen@gmail.com</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p class="footer-title">Copyrights @ <span>Abdallah Ghanem</span> </p>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/abdallah-ghanem0"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.behance.net/abdoghanem"><i class="fa-brands fa-behance"></i></a>
+            <a href="https://github.com/abdallah-ghanem"><i class="fa-brands fa-github"></i></a>
+        </div>
+    </footer>
 
 
 </body>
